[package]
name = "habitable_zone"
version = "1.0.0"
authors = ["Kamil Bicz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "habzone"
path = "src/main.rs"

[profile.release]
lto = "thin"
opt-level = 3
